# Systematic

./: Design.md  LICENSE  README.md  Systematic.cabal
app/Echo/: Main.hs
src/: Systematic.hs
src/Systematic/: Backend.hs  BufferedSocket.hs  CError.hs  Enumerator.hs  Language.hs  LogCommands.hs  Logging.hs  PosixError.hs  RawSocket.hs  Real.hs
src/Systematic/Backend/: IO.hs  Real.hs
src/Systematic/Backend/Mock/: Base.hs  Threads.hs
src/Systematic/Backend/Real/: Base.hs  Memory.hs  Sockets.hs
src/Systematic/Real/: Base.hs  Sockets.hs
src/Systematic/Socket/: Buffered.hs  Raw.hs
